# bevy-rl

./: .gitignore  Cargo.toml  LICENSE  README.md
bins/headless/: Cargo.toml
bins/headless/src/: main.rs
bins/viewer/: Cargo.toml
bins/viewer/src/: main.rs
crates/morphology_studio/: Cargo.toml
crates/morphology_studio/src/: document.rs  edit.rs  hints.rs  lib.rs  scene.rs  selection.rs  simulate.rs  state.rs  ui.rs
crates/policy/: Cargo.toml
crates/policy/config/: actor_critic.json
crates/policy/src/: actor_critic.rs  checkpoint.rs  gaussian.rs  lib.rs
crates/sim_core/: Cargo.toml
crates/sim_core/src/: config.rs  control.rs  creature.rs  env.rs  ground.rs  lib.rs  plugin.rs  rl.rs  ron_config.rs  spawn.rs
crates/sim_envs/: Cargo.toml
crates/sim_envs/src/: dog_ground.rs  lib.rs
crates/sim_viewer/: Cargo.toml
crates/sim_viewer/src/: lib.rs  policy_control.rs
crates/training/: Cargo.toml
crates/training/src/: dashboard.rs  lib.rs  optimizer_checkpoint.rs  ppo.rs  rollout.rs  run.rs
examples/dog/: Cargo.toml
examples/dog/bins/morphology_studio/: Cargo.toml
examples/dog/bins/morphology_studio/src/: main.rs
examples/dog/bins/train/: Cargo.toml
examples/dog/bins/train/src/: main.rs
examples/dog/bins/view/: Cargo.toml
examples/dog/bins/view/src/: main.rs
examples/dog/config/: morphology.ron  reward.json
examples/dog/src/: contacts.rs  env.rs  lib.rs  morphology.rs  reward.rs  spawn_noise.rs
