[workspace]
resolver = "2"
members = [
    "crates/sim_core",
    "crates/policy",
    "crates/training",
    "crates/sim_viewer",
    "examples/dog",
    "examples/dog/bins/train",
    "examples/dog/bins/view",
]
default-members = [
    "crates/sim_core",
    "crates/policy",
    "crates/training",
    "crates/sim_viewer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bevy = { version = "0.19", default-features = false }
avian3d = { version = "0.7", default-features = false, features = [
    "3d",
    "f32",
    "parry-f32",
    "xpbd_joints",
    "parallel",
] }
bevy_transform_interpolation = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rfd = "0.17.2"
rand = "0.10"
burn = { version = "0.21", default-features = false }
sim_core = { path = "crates/sim_core" }
policy = { path = "crates/policy" }
training = { path = "crates/training" }
sim_viewer = { path = "crates/sim_viewer" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.clippy]
doc_markdown = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
unwrap_or_default = "warn"
disallowed_methods = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"
print_stdout = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
too_long_first_doc_paragraph = "allow"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
match_same_arms = "warn"
manual_let_else = "warn"
print_stderr = "warn"
redundant_closure_for_method_calls = "warn"
