[package]
name = "sim_headless"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless batch runner for parallel physics environments"

[[bin]]
name = "sim_headless"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true, features = [
    "std",
    "bevy_log",
    "bevy_state",
    "multi_threaded",
] }
avian3d = { workspace = true }
sim_core = { workspace = true }
sim_envs = { workspace = true }
