[package]
name = "sim_viewer_bin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Viewer binary: watch ~4 envs with transform interpolation"

[[bin]]
name = "sim_viewer"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true, default-features = true }
sim_viewer = { workspace = true }
