[package]
name = "sim_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fixed-timestep parallel physics sim core: env isolation, creature articulations, spawn/reset"

[dependencies]
bevy = { workspace = true, features = [
    "std",
    "bevy_log",
    "bevy_state",
    "multi_threaded",
] }
avian3d = { workspace = true }
bevy_transform_interpolation = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
