[package]
name = "sim_envs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Concrete simulation environments (flat ground + dog-like quadruped)"

[dependencies]
bevy = { workspace = true, features = ["std"] }
avian3d = { workspace = true }
sim_core = { workspace = true }
