[package]
name = "sim_viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Windowed multi-view client for watching parallel sim environments"

[dependencies]
bevy = { workspace = true, default-features = true }
avian3d = { workspace = true }
bevy_transform_interpolation = { workspace = true }
sim_core = { workspace = true }
sim_envs = { workspace = true }
