[package]
name = "training"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PPO utilities: rollouts, GAE, update loop, and train dashboard"

[dependencies]
bevy = { workspace = true, features = [
    "std",
    "bevy_log",
    "bevy_state",
    "multi_threaded",
] }
avian3d = { workspace = true }
burn = { workspace = true, default-features = false, features = [
    "std",
    "wgpu",
    "autodiff",
    "train",
    "tui",
] }
policy = { workspace = true }
sim_core = { workspace = true }
