[package]
name = "dog"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Example creature pack: dog quadruped balance + train/view binaries"

[dependencies]
bevy = { workspace = true, features = ["std"] }
avian3d = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
sim_core = { workspace = true }

[lints]
workspace = true
