[package]
name = "dog_view"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dog example: multi-view viewer binary"

[[bin]]
name = "dog_view"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true, default-features = true }
dog = { path = "../.." }
sim_viewer = { workspace = true }

[lints]
workspace = true
